Use Paths.get instead of Path.of due to Java 8 compatibility.